syntax = "proto3";
package basekv;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.basekv.proto";
option optimize_for = SPEED;

message LoadRules{
  string loadRules = 1; // json object string
  uint64 hlc = 2;
}
